fix bug with small images being stretche too much

--- a/src/scss/_style.scss
+++ b/src/scss/_style.scss
@@ -102,8 +102,6 @@
   img {    
     max-width: 100%;
     object-fit: cover;
-    width: 100%;
-    height: 100%;
   }
 
   .hotspot3-fancybox-text {
